Intro text and minor strings changed

--- a/app/src/main/res/layout/activity_splash_activity.xml
+++ b/app/src/main/res/layout/activity_splash_activity.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/swasth_sampark"
+            android:textAlignment="center"
             android:fontFamily="@font/lato_bold"
             android:textColor="@color/white"
             android:layout_gravity="center"
