--- a/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
+++ b/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
@@ -22,13 +22,15 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
+            android:visibility="gone"
             android:src="@mipmap/ic_launcher_splash_login" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="@string/intelecare"
+            android:text="@string/swasth_sampark"
+            android:textAlignment="center"
             android:fontFamily="@font/lato_bold"
             android:textColor="@color/white"
             android:layout_gravity="center"
@@ -58,7 +60,7 @@
             android:textColor="@color/white"
             android:layout_gravity="center"
             android:textSize="34sp"
-            android:text="Stay Aware \u2022 Stay Safe"
+            android:text="@string/splash_desc_text"
             android:src="@drawable/ic_stay_safe"/>
 
     </LinearLayout>
