--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -173,7 +173,7 @@
                                 android:includeFontPadding="false"
                                 android:text="@string/how_are_you_today"
                                 android:textColor="@color/white"
-                                android:textSize="12sp" />
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -181,9 +181,9 @@
                                 android:layout_marginTop="20dp"
                                 android:fontFamily="@font/lato_bold"
                                 android:includeFontPadding="false"
-                                android:text="@string/txt_selfCheck"
+                                android:text="@string/txt_post_covid_selfCheck"
                                 android:textColor="@color/white"
-                                android:textSize="32sp" />
+                                android:textSize="26sp" />
 
 
                             <LinearLayout
@@ -249,7 +249,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="@string/covid_home_care"
+                        android:text="@string/recovering_covid"
                         android:textColor="@color/txt_sub_header_color"
                         android:textSize="13sp" />
 
@@ -262,7 +262,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="@string/about_covid"
+                        android:text="@string/simple_exercises"
                         android:textColor="@color/txt_sub_header_color"
                         android:textSize="13sp" />
 
@@ -598,7 +598,7 @@
                                 android:gravity="start|center"
                                 android:hint=""
                                 android:textStyle="bold"
-                                android:text="@string/txt_get_help_now"
+                                android:text="@string/txt_talk_to_doc"
                                 android:textColor="@color/txt_sub_header_color"
                                 android:textSize="18sp" />
 
@@ -629,6 +629,7 @@
                     android:id="@+id/mental_cardview_help"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_below="@+id/cardview_help"
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="15dp"
