--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -207,8 +207,7 @@
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:ems="10"
-                                android:focusable="true"
-                                android:focusableInTouchMode="true"
+                                android:focusable="false"
                                 android:freezesText="true"
                                 android:hint="@string/identification_screen_prompt_birthday"
                                 android:imeOptions="actionUnspecified"
