--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -35,6 +35,7 @@
 
             <LinearLayout
                 android:id="@+id/ll_center"
+                android:animateLayoutChanges="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_logo"
@@ -71,12 +72,12 @@
                             android:id="@+id/et_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/prompt_email"
+                            android:hint="@string/prompt_phone_number"
                             android:textColorHint="@color/font_black_5"
                             android:imeOptions="actionNext"
                             android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
-                            android:inputType="text"
-                            android:maxLength="8"
+                            android:inputType="number"
+                            android:maxLength="10"
                             android:fontFamily="@font/lato_regular"
                             android:theme="@style/MyEditTextTheme"
                             android:textColor="@color/white"
@@ -87,6 +88,9 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/llOtp"
+                    android:visibility="gone"
+                    tools:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
@@ -116,7 +120,7 @@
                             android:id="@+id/et_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/prompt_password"
+                            android:hint="@string/prompt_otp"
                             android:textColorHint="@color/font_black_5"
                             android:imeOptions="actionDone"
                             android:maxLength="50"
@@ -140,7 +144,7 @@
                     android:paddingVertical="10dp"
 
                     android:background="@drawable/button_bg_rounded_corners"
-                    android:text="@string/action_sign_in"
+                    android:text="@string/action_send_otp"
                     android:fontFamily="@font/lato_bold"
                     android:textColor="@color/button_text_color"
                     android:textSize="26sp"
