--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,9 +12,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
         android:fillViewport="true"
-        android:overScrollMode="never">
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -32,20 +32,20 @@
 
             <LinearLayout
                 android:id="@+id/ll_center"
-                android:animateLayoutChanges="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_logo"
-                android:layout_marginEnd="30dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -62,36 +62,33 @@
                         android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         android:textColorHint="@color/font_black_5"
-                        app:passwordToggleTint="@color/white"
-                        android:theme="@style/MyEditTextTheme">
+                        android:theme="@style/MyEditTextTheme"
+                        app:passwordToggleTint="@color/white">
 
                         <EditText
                             android:id="@+id/et_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/lato_regular"
                             android:hint="@string/prompt_phone_number"
-                            android:textColorHint="@color/font_black_5"
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:maxLength="10"
-                            android:fontFamily="@font/lato_regular"
-                            android:theme="@style/MyEditTextTheme"
                             android:textColor="@color/white"
-                            android:textSize="16sp" />
+                            android:textColorHint="@color/font_black_5"
+                            android:textSize="16sp"
+                            android:theme="@style/MyEditTextTheme" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/llOtp"
-                    android:visibility="gone"
-                    tools:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -106,24 +103,68 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:hint="@string/prompt_password"
                         android:textColor="@color/white"
-                        android:hint="@string/prompt_otp"
                         android:textColorHint="@color/font_black_5"
-                        app:passwordToggleTint="@color/white"
                         android:theme="@style/MyEditTextTheme"
-                        app:passwordToggleEnabled="true">
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/white">
 
                         <EditText
                             android:id="@+id/et_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColorHint="@color/font_black_5"
+                            android:fontFamily="@font/lato_regular"
                             android:imeOptions="actionDone"
                             android:maxLength="50"
                             android:maxLines="1"
-                            android:fontFamily="@font/lato_regular"
-                            android:textColor="@color/white"
                             android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/font_black_5"
+                            android:textSize="16sp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:src="@drawable/ic_lock" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/etConfirmPasswordLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:hint="@string/prompt_confirm_password"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/font_black_5"
+                        android:theme="@style/MyEditTextTheme"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/white">
+
+                        <EditText
+                            android:id="@+id/et_confirm_password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/lato_regular"
+                            android:imeOptions="actionDone"
+                            android:maxLength="50"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/font_black_5"
                             android:textSize="16sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -139,67 +180,10 @@
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/button_bg_rounded_corners"
                     android:fontFamily="@font/lato_bold"
-                    android:text="@string/action_send_otp"
+                    android:text="@string/action_reset_password"
                     android:textColor="@color/button_text_color"
                     android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/cant_login_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="15dp"
-                    android:paddingBottom="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingStart="10dp"
-                    android:includeFontPadding="false"
-                    android:paddingTop="5dp"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/cant_login_user"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    />
-
-
-                <TextView
-                    android:id="@+id/txt_signup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="15dp"
-                    android:gravity="center_horizontal"
-                    android:text="@string/txt_sign_up_option"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/lato_regular"
-                    android:textSize="16sp"
-                    android:textColorLink="@color/white"
-                    />
-
-                <Button
-                    android:id="@+id/sign_up_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/button_bg_rounded_corners"
-                    android:text="@string/title_sign_up"
-                    android:fontFamily="@font/lato_bold"
-                    android:textColor="@color/button_text_color"
-                    android:textSize="16sp"
-                    android:layout_marginBottom="10dp"
-                    />
-
-
-
-
-
             </LinearLayout>
-
         </RelativeLayout>
-
     </ScrollView>
-
-
 </RelativeLayout>
