Intro heading changed and privacy text modified

--- a/app/src/main/res/layout-sw600dp/content_visit_summary.xml
+++ b/app/src/main/res/layout-sw600dp/content_visit_summary.xml
@@ -576,7 +576,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/visit_help_text"
-                        android:text="@string/txt_get_help_now"
+                        android:text="@string/txt_talk_to_doc"
                         android:textSize="@dimen/text_18sp"
                         android:layout_marginStart="14sp"
                         android:fontFamily="@font/lato_bold"
@@ -585,7 +585,6 @@
                         android:background="@android:color/transparent"
                         android:drawableStart="@drawable/ic_icons8_whatsapp"
                         android:gravity="start|center"
-                        android:layout_marginTop="9dp"
                         android:drawablePadding="14sp" />
 
                     <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
