--- a/app/src/main/res/layout/activity_privacy_notice_2.xml
+++ b/app/src/main/res/layout/activity_privacy_notice_2.xml
@@ -79,11 +79,13 @@
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
-                android:fontFamily="@fonts/Lato_Regular"
-                android:padding="10dp"
                 android:autoLink="all"
+                android:fontFamily="@font/lato_regular"
+                android:padding="10dp"
                 android:textAlignment="gravity"
-                android:textFontWeight="1" />
+                android:textColor="@color/black"
+                android:textFontWeight="1"
+                android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
