--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -492,6 +492,7 @@
                             tools:visibility="visible"
                             android:minHeight="32dp"
                             android:gravity="center"
+                            android:fontFamily="@font/lato_regular"
                             android:textColor="@color/colorPrimary"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
