--- a/app/src/main/res/drawable/button_bg_rounded_blue.xml
+++ b/app/src/main/res/drawable/button_bg_rounded_blue.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#2014EB" />
+            <solid android:color="@color/colorPrimaryDark" />
             <stroke android:width="2dp" android:color="#ffffff" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="18dp" />
