--- a/app/src/main/res/drawable/rectangle_7.xml
+++ b/app/src/main/res/drawable/rectangle_7.xml
@@ -13,7 +13,7 @@
             />
         <path
             android:pathData="M0 0V56.2349H264.886V0"
-            android:fillColor="#2014EB"
+            android:fillColor="@color/colorPrimaryDark"
             />
     </group>
 </vector>
