--- a/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
+++ b/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
@@ -4,11 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/ic_splash_bg"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/gradient_splash_background"
     tools:context=".activities.splash_activity.SplashActivity">
 
     <LinearLayout
@@ -22,8 +18,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:visibility="gone"
-            android:src="@mipmap/ic_launcher_splash_login" />
+            android:src="@drawable/ic_spash_logo_background" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -59,6 +54,7 @@
             android:fontFamily="@font/lato_bold"
             android:textColor="@color/white"
             android:layout_gravity="center"
+            android:visibility="gone"
             android:textSize="34sp"
             android:text="COVID-19 रोगियों के लिए रिकवरी और पुनर्वास"
             android:textAlignment="center"
@@ -99,11 +95,75 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/lato_bold"
             android:textColor="@color/white"
+            android:visibility="gone"
             android:layout_gravity="center"
             android:textSize="34sp"
             android:text="Recovery and Rehabilitation for COVID-19 patients"
             android:src="@drawable/ic_stay_safe"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_margin="5dp"
+        android:layout_above="@id/powered_text"
+        android:gravity="bottom"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/sponsor_one"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:src="@drawable/sponsor_logo_four"
+            android:layout_alignParentStart="true"/>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/sponsor_two"
+            android:src="@drawable/sponsor_logo_three" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/sponsor_three"
+            android:src="@drawable/sponsor_logo_two" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/sponsor_four"
+            android:src="@drawable/sponsor_logo_one" />
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/powered_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lato_regular"
+            android:text="Powered by Intelehealth, Ekal Arogya &amp; \n Transform Rural India"
+            android:textColor="@color/white"
+            android:layout_margin="3dp"
+            android:textAlignment="center"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
