Removed NHM logo

--- a/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
+++ b/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
@@ -125,6 +125,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:visibility="gone"
             android:id="@+id/sponsor_two"
             android:src="@drawable/sponsor_logo_three" />
 
