Modified sign up code to show register button after otp is sent

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -77,6 +77,7 @@
                     android:layout_height="20dp" />
 
                 <LinearLayout
+                    android:animateLayoutChanges="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingHorizontal="10dp"
@@ -263,7 +264,7 @@
                                 android:layout_marginTop="15dp"
                                 android:includeFontPadding="false"
                                 android:textSize="16sp"
-                                android:text="@string/identification_screen_prompt_city"
+                                android:text="@string/hint_district"
                                 android:textAppearance="@style/sign_up_input" />
                             <Spinner
                                 android:id="@+id/city_spinner"
@@ -545,7 +546,7 @@
                         android:layout_marginBottom="15dp"
                         android:orientation="vertical"
                         android:animateLayoutChanges="true"
-                        tools:visibility="visible">
+                        android:visibility="gone">
 
                         <!--OTP No-->
                         <com.google.android.material.textfield.TextInputLayout
@@ -989,6 +990,23 @@
 
             </LinearLayout>
             </LinearLayout>
+                <Button
+                    android:id="@+id/btnSendOtp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/rectangle_7"
+                    android:text="@string/send_otp"
+                    android:textAppearance="@style/sign_up_save" />
+                <LinearLayout
+                    android:id="@+id/frRegister"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <LinearLayout
                     android:id="@+id/buttons"
                     android:layout_marginTop="15dp"
@@ -1031,6 +1049,7 @@
                     android:background="@drawable/rectangle_7"
                     android:text="@string/title_sign_up"
                     android:textAppearance="@style/sign_up_save" />
+            </LinearLayout>
 
                 <!--                <android.support.design.widget.TextInputLayout-->
                 <!--                    android:layout_width="match_parent"-->
