--- a/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
+++ b/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
@@ -9,9 +9,10 @@
 
     <LinearLayout
         android:id="@+id/ll_center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:layout_above="@id/llStates"
         android:orientation="vertical">
 
         <ImageView
@@ -73,15 +74,17 @@
             android:layout_gravity="center"
             android:textSize="48sp" />
 
-        <!--<TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/stay_aware_stay_safe"
+            android:layout_marginTop="8dp"
+            android:text="NISHTHA’s Comprehensive Post COVID Care\nInitiative"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:gravity="center"
+            android:textAlignment="center"
             android:fontFamily="@font/lato_bold"
-            android:textSize="24sp" />-->
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
 <!--        <ImageView
             android:layout_width="wrap_content"
@@ -104,6 +107,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llBottomLogo"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="5dp"
@@ -167,4 +171,59 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/llStates"
+        android:orientation="horizontal"
+        android:layout_above="@id/llBottomLogo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/ic_jh_logo"
+                android:layout_width="64dp"
+                android:layout_height="64dp"/>
+            <TextView
+                android:text="Jharkhand"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:layout_width="64dp"
+            android:layout_height="1px"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/ic_mp_logo"
+                android:layout_width="64dp"
+                android:layout_height="64dp"/>
+            <TextView
+                android:text="Madhya Pradesh"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
