--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -810,7 +810,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <TextView
+                <!--<TextView
                     android:id="@+id/your_data_overview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -838,8 +838,43 @@
                     android:id="@+id/recyclerview_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/your_data_overview" />
+                    android:layout_below="@id/your_data_overview" />-->
 
+                <androidx.cardview.widget.CardView
+                    android:layout_below="@id/ppe_cardView_request"
+                    android:id="@+id/cv_appointment_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="10sp"
+                    app:cardElevation="5sp"
+                    android:layout_margin="10sp">
+
+                    <LinearLayout
+                        android:padding="12dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/appointment_status"
+                            android:fontFamily="@font/lato_bold"
+                            android:layout_gravity="center_horizontal"
+                            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/check_appointments"
+                            android:fontFamily="@font/lato_regular"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:gravity="center"
+                            android:textColor="@color/txt_sub_header_color"
+                            android:layout_gravity="center_horizontal"/>
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
             </RelativeLayout>
 
